objects/ssot__RebateClaim__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApprovedAmount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CalculatedAmount__c</fullName>
        <label>Calculated Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimAmount__c</fullName>
        <label>Claim Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimDateTime__c</fullName>
        <label>Claim Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimType__c</fullName>
        <label>Claim Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimedByAccountId__c</fullName>
        <label>Claimed By Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimedByAccountReferenceNumber__c</fullName>
        <label>Claimed By Account Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Rebate Claim Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipatingAccountId__c</fullName>
        <label>Participating Account Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipatingAccountReferenceNumber__c</fullName>
        <label>Participating Account Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessingStatusMessageText__c</fullName>
        <label>Processing Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCodeText__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitofMeasureId__c</fullName>
        <label>Quantity Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RebateClaimProcessingStatus__c</fullName>
        <label>Rebate Claim Processing Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RebateProgramReferenceNumber__c</fullName>
        <label>Rebate Program Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceUnitPriceAmount__c</fullName>
        <label>Reference Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RetailUnitPriceAmount__c</fullName>
        <label>Retail Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SaleUnitPriceAmount__c</fullName>
        <label>Sale Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTransactionIdentifier__c</fullName>
        <label>Sales Transaction Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipDateTime__c</fullName>
        <label>Ship Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingTransactionIdentifier__c</fullName>
        <label>Shipping Transaction Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleId__c</fullName>
        <label>Vehicle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>